Resolves: tdf#95723 arrange GridControl buttons to be always visible

as long as there's space for them

Change-Id: Id96069b5c50483309611381afdf62bb0d30e9c38